# football-pool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  config.py  extensions.py  footbal-pool.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.sh  tailwind.config.js  wsgi.py
.devcontainer/: devcontainer.dockerfile  devcontainer.json  docker_compose.yaml
apps/: tailwind.config.js
apps/football_pool/: __init__.py  commands.py  config.py  extensions.py  gunicorn_config.py  job_scheduling.py  main.py  mixins.py  models.py  seed.py  views.py  wsgi.py  years.py
apps/football_pool/auth/: models.py
apps/football_pool/get_scores/: __init__.py  example.json  exceptions.py  make_games.py  query.py  single_event.json  write_to_db.py
apps/football_pool/query_espn/: example.json  write_to_db.py
apps/football_pool/seed/: seed_2024.py  seed_2025.py  seed_2025_fix.py
apps/football_pool/static/: input.css  output.css
apps/football_pool/templates/: about.html  about_help.txt  assignments.html  base.html  index.html  results.html  (+2 more)
migrations/versions/: 589935a87528_remove_single_parent_stipulation.py  6797067bbf7c_fixing_foreign_keys_maybe_lol.py  6ae5ececcce6_add_season_years_to_results_and_.py  7cb5669c0bc6_adding_pot_to_dashboard.py  99c62c252caa_initial_models_addition.py  a00cd32bb6e6_remove_le_score_for_winning_games.py  b577ca68ff41_fixing_round_3.py  c0cb9bf1b6a9_remove_score.py  cb66b3315768_allowing_teams_to_repeat_in_winning_.py  d51670f25756_trying_to_fix_relationship.py  e622ce2b4945_adding_winning_games_to_db.py  e829fbe103d9_fixing_round_2.py
prod/: build_and_push_image.sh  entrypoint.sh  prod.dockerfile  prod_docker_compose.yaml
templates/: base.html
tests/: test_empty.py
(+10 files in other folders)
