[project]
name = "football_pool"
version = "1.1.0"
description = "A Flask app for a website tracking the results/history of my family's football pool."
requires-python = ">=3.10"
dependencies = [
    "flask-apscheduler>=1.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
include = ["apps", "migrations", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "C90", # mccabe complexity
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports
